--- a/dashboard/templates/dashboard/pages/comment-and-reply/comment-reply-list.html
+++ b/dashboard/templates/dashboard/pages/comment-and-reply/comment-reply-list.html
@@ -40,6 +40,7 @@
                             <tr class="text-center">
                                 <th>Action</th>
                                 <th>#</th>
+                                <th>News</th>
                                 <th>Comment</th>
                                 <th>Replied By</th>
                                 <th>Reply</th>
@@ -72,6 +73,7 @@
                                     {{ forloop.counter }}
                                 </th>
 
+                                <td>{{ object.comment.news.title|truncate_word:30|remove_html_tags }}</td>
                                 <td>{{ object.comment }}</td>
                                 <td>{{ object.replied_by.username }}</td>
                                 <td>{{ object.reply|truncate_word:30|remove_html_tags }}</td>
@@ -82,7 +84,7 @@
                             </tr>
                             {% empty %}
                             <tr>
-                                <td colspan="7" class="text-center">
+                                <td colspan="8" class="text-center">
                                     <div class="alert alert-warning">No item found!</div>
                                 </td>
                             </tr>
@@ -93,6 +95,7 @@
                             <tr class="text-center">
                                 <th>Action</th>
                                 <th>#</th>
+                                <th>News</th>
                                 <th>Comment</th>
                                 <th>Replied By</th>
                                 <th>Reply</th>
