Comment View Modal Added

--- a/dashboard/templates/dashboard/pages/comment-and-reply/comment-list.html
+++ b/dashboard/templates/dashboard/pages/comment-and-reply/comment-list.html
@@ -61,7 +61,7 @@
                                         {% endif %}
                                     </button>
 
-                                    <button class="btn btn-info btn-sm js_view_btn" value="{{ object.comment }}" data-toggle="modal" data-target="#modal-view-details">
+                                    <button class="btn btn-info btn-sm js_view_btn" data-value="{{ object.comment }}" data-toggle="modal" data-target="#modal-view-details">
                                         <span class="">
                                             <i class="fas fa-eye" aria-hidden="true"></i>
                                         </span>
