--- a/dashboard/templates/dashboard/pages/comment-and-reply/comment-reply-list.html
+++ b/dashboard/templates/dashboard/pages/comment-and-reply/comment-reply-list.html
@@ -62,7 +62,7 @@
                                         {% endif %}
                                     </button>
 
-                                    <button class="btn btn-info btn-sm js_view_btn" value="{{ object.reply }}" data-toggle="modal" data-target="#modal-view-details">
+                                    <button class="btn btn-info btn-sm js_view_btn" data-value="{{ object.reply }}" data-toggle="modal" data-target="#modal-view-details">
                                         <span class="">
                                             <i class="fas fa-eye" aria-hidden="true"></i>
                                         </span>
@@ -74,7 +74,13 @@
                                 </th>
 
                                 <td>{{ object.comment.news.title|truncate_word:30|remove_html_tags }}</td>
-                                <td>{{ object.comment }}</td>
+                                <td>
+                                    <a href="#" class="js_view_btn" data-toggle="modal" data-target="#modal-view-details" data-value="{{ object.comment.comment }}">
+                                        <span class="{% if object.comment.is_approved == True %}text-success{% else %}text-danger{% endif %}">
+                                            {{ object.comment.comment|truncate_word:30|remove_html_tags }}
+                                        </span>
+                                    </a>
+                                </td>
                                 <td>{{ object.replied_by.username }}</td>
                                 <td>{{ object.reply|truncate_word:30|remove_html_tags }}</td>
                                 <td id="replyIsApprovedCol_{{object.id}}" class="{% if object.is_approved == True %}text-success{% else %}text-danger{% endif %}">
