--- a/dashboard/templates/dashboard/pages/job-application/update-status.html
+++ b/dashboard/templates/dashboard/pages/job-application/update-status.html
@@ -65,6 +65,22 @@
 {% endblock %}
 
 {% block additional_js %}
+
+<!--<script type="text/javascript">-->
+<!--document.getElementById('show-element').onclick = function() {-->
+<!--  var element = document.getElementById('to-show');-->
+<!--  if (element.className === 'hide') {-->
+<!--    element.className = 'show';-->
+<!--    document.getElementsByTagName('body')[0].className = 'on';-->
+<!--    document.getElementById('show-element').className = 'active';-->
+<!--  } else {-->
+<!--    element.className = 'hide';-->
+<!--    document.getElementsByTagName('body')[0].className = 'off';-->
+<!--    document.getElementById('show-element').className = '';-->
+<!--  }-->
+<!--}-->
+
+<!--</script>-->
 <!-- Bootstrap Validator -->
 <script src="{% static 'assets/vendors/bootstrap-validator/validator.js' %}"></script>
 
