--- a/auspicious/templates/page/about.html
+++ b/auspicious/templates/page/about.html
@@ -3,6 +3,36 @@
 <html lang="en">
 <head>
 {% include "components/styles.html" %}
+<style>
+    .box {
+      position: relative;
+      width: 100%;
+      max-width: 100%;
+      opacity: 1;
+}
+    .overlay{
+      position: absolute;
+      bottom: 0;
+      background: rgb(0, 0, 0);
+      background: rgba(0, 0, 0, 0.8); /* Black see-through */
+      color: #f1f1f1;
+      width: 100%;
+      height:100%;
+      transition: .5s ease;
+      opacity:0;
+      color: white;
+      padding: 2%;
+      text-align: center;
+      opacity: 1;
+    }
+    .headline{
+        text-align:center;
+        color:#3492d0;
+    }
+    .headline h2{
+        padding-top:15%
+        }
+</style>
 </head>
 <body>
 
@@ -56,6 +86,49 @@
     </div>
     <!-- About End -->
 
+    <!-- Mission Vision Start -->
+
+    <div class="mission-vision py-5 section-title-2" id="mission&vision" style="background-image:url({% static 'assets/landing/assets/img/mission.jpg' %});">
+        <div class="container">
+            <h3 class="text-center text-uppercase fw-bold mb-4">Vision & <span>Mission</span></h3>
+            <div class="box">
+                <img src="{% static 'assets/landing/assets/img/mission.jpg' %}" alt="" style="width:100%; height: 500px">
+                <div class="overlay">
+                    <div class="row" style="text-align: justify;">
+                        <div class="col-md-6 headline">
+                            <h2><i class="fas fa-bullseye"></i></h2>
+                        </div>
+                        <div class="col-md-6">
+                            <div>
+                                We devoted to become on of the leading services providing (consultant) company in construction section. We are focusing on real state , telecom sector & other construction sector in Bangladesh by providing services in a safe, timely & quality-oriented manner,
+                                thus emerging as the most preferred engineering solution’s provider for our clients & also provided service as requirements.
+                            </div>
+                        </div>
+                    </div>
+                    <br><br>
+                    <div class="row" style="text-align: justify">
+                        <div class="col-md-6" >
+                            <ol>
+                                <li>Adopt innovative practices to ensure quality without compromising the time frame & budget.</li>
+                                <li>To offer value added in cost effective service to improve our partner-client performance, thus to turn clients dreams into reality.</li>
+                                <li>Provide a safe working environment by promoting health & safety in all areas.</li>
+                                <li>Respect nature & the environment & work together towards a sustainable green future for the benefit for all.</li>
+                                <li>Recognize employee potential for career development and provide the necessary training and environment to realize their potential.</li>
+                            </ol>
+                        </div>
+                        <div class="col-md-6 headline">
+                            <h2><i class="fas fa-bullseye"></i></h2>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Mission Vision End -->
+
     <!-- Journey Start -->
     <div class="journey-area py-5 bg-gray section-title-2">
         <div class="container">
@@ -67,28 +140,6 @@
     </div>
     <!-- Journey End -->
 
-    <!-- Mission Vision Start -->
-    <div class="mission-vision py-5 section-title-2" id="mission&vision">
-        <div class="container">
-            <h3 class="text-center text-uppercase fw-bold mb-4"><span>Mission</span> & Vision</h3>
-            <div class="row" style="text-align: justify">
-                <div class="col-md-6" >
-                    <ol>
-                        <li>Adopt innovative practices to ensure quality without compromising the time frame & budget.</li>
-                        <li>To offer value added in cost effective service to improve our partner-client performance, thus to turn clients dreams into reality.</li>
-                        <li>Provide a safe working environment by promoting health & safety in all areas.</li>
-                        <li>Respect nature & the environment & work together towards a sustainable green future for the benefit for all.</li>
-                        <li>Recognize employee potential for career development and provide the necessary training and environment to realize their potential.</li>
-                    </ol>
-                </div>
-                <div class="col-md-6">
-                    <div>We devoted to become on of the leading services providing (consultant) company in construction section. We are focusing on real state , telecom sector & other construction sector in Bangladesh by providing services in a safe, timely & quality-oriented manner, thus emerging as the most preferred engineering solution’s provider for our clients & also provided service as requirements.</div>
-                    <p class="fw-bold text-center">&#8221;Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, tempora quo consequatur pariatur aspernatur commodi harum facilis&#8221;</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Mission Vision End -->
 
     <!-- Organization Profile Start -->
     <div class="org-profile py-4 section-title-2" id="profile">
