--- a/auspicious/templates/page/telecom-service.html
+++ b/auspicious/templates/page/telecom-service.html
@@ -11,8 +11,6 @@
     {% include "components/header.html" %}
 
 
-
-
     <!-- Breadcrumbs -->
     <div class="breadcrumbs" style="background-image:url({% static 'assets/landing/assets/img/breadcrumbs-bg.jpg' %})">
         <div class="container">
@@ -55,7 +53,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4 text-center">
-                    <img src="{% static 'assets/landing/assets/img/service/1.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/landing/assets/img/service/tower2.jpg' %}" class="img-fluid" alt="" style="height: 200px; width: 360px;">
                 </div>
 
                 <div class="col-md-4 mb-4">
@@ -88,7 +86,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4 mt-md-5 pt-md-5 text-center">
-                    <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/landing/assets/img/service/antenna.jpg' %}" class="img-fluid" alt="" style="height: 200px; width: 360px;">
                 </div>
 
                 <div class="col-md-4 mb-4 mt-md-5">
@@ -173,7 +171,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mb-3 pt-md-5">
-                    <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/landing/assets/img/service/tower.jpg' %}" class="img-fluid" alt="" style="height: 300px; width:400px;">
                 </div>
                 <div class="col-md-6">
                     <div class="telecome-tool mb-3">
