--- a/auspicious/templates/page/news.html
+++ b/auspicious/templates/page/news.html
@@ -43,53 +43,61 @@
     <div class="blog-area pt-100 pb-100">
         <div class="container">
             <div class="row">
-                {% for news in paginated_news_list %}
+                {% if paginated_news_list %}
+                    {% for news in paginated_news_list %}
 
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="2s">
-                        <div class="blog-img-date-wrap mb-25">
-                            <div class="blog-img">
-                                <a href="{% url 'blog_details' slug=news.slug %}">
-                                    {% if news.image %}
-                                    <img src={{ news.image.url }} alt="" style="height:250px;width:400px;">
-                                    {% else %}
-                                    <img src="{% static './assets/landing/assets/img/no.jpg' %}" alt="" style="height:250px;width:400px;">
-                                    {% endif %}
-                                </a>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="2s">
+                            <div class="blog-img-date-wrap mb-25">
+                                <div class="blog-img">
+                                    <a href="{% url 'blog_details' slug=news.slug %}">
+                                        {% if news.image %}
+                                        <img src={{ news.image.url }} alt="" style="height:250px;width:400px;">
+                                        {% else %}
+                                        <img src="{% static './assets/landing/assets/img/no.jpg' %}" alt="" style="height:250px;width:400px;">
+                                        {% endif %}
+                                    </a>
+                                </div>
+                                <div class="blog-date">
+
+                                        <h5>
+                                            {{ news.created_at.date.day }} <span>{{ news.created_at|date:"M" }}</span>
+                                        </h5>
+
+                                </div>
                             </div>
-                            <div class="blog-date">
 
-                                    <h5>
-                                        {{ news.created_at.date.day }} <span>{{ news.created_at|date:"M" }}</span>
-                                    </h5>
-
+                            <div class="blog-content">
+                                <div class="blog-meta">
+                                    <ul class="non-bullet-list">
+                                        <li><a href="">{{ news.category }}</a>,</li>
+                                        <li>By:<a href="#"> {{ news.created_by }}</a></li>
+                                    </ul>
+                                </div>
+                                    <a href="{% url 'blog_details' slug=news.slug %}">
+                                        <h3>
+                                            {{ news.title|truncatechars_html:20 }}
+                                        </h3>
+                                     </a>
+                                    <p>
+                                    {{ news.description|safe|truncatechars_html:40}}
+                                    </p>
+                                <div class="blog-btn-2 btn-hover">
+                                    <a class="btn hover-border-radius theme-color" href="{% url 'blog_details' slug=news.slug %}">Read More</a>
+                                </div>
                             </div>
+
                         </div>
-
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <ul class="non-bullet-list">
-                                    <li><a href="">{{ news.category }}</a>,</li>
-                                    <li>By:<a href="#"> {{ news.created_by }}</a></li>
-                                </ul>
-                            </div>
-                                <a href="{% url 'blog_details' slug=news.slug %}">
-                                    <h3>
-                                        {{ news.title|truncatechars_html:20 }}
-                                    </h3>
-                                 </a>
-                                <p>
-                                {{ news.description|safe|truncatechars_html:40}}
-                                </p>
-                            <div class="blog-btn-2 btn-hover">
-                                <a class="btn hover-border-radius theme-color" href="{% url 'blog_details' slug=news.slug %}">Read More</a>
-                            </div>
-                        </div>
-
                     </div>
-                </div>
 
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                <div class="text-center">
+                    <div class="alert alert-info">
+                        No Blogs Found!
+                    </div>
+                </div >
+                {% endif %}
 
 
             </div>
